2009-03-02  Nikolas Coukouma <atrus@zmanda.com>
	* installcheck/amrmtape.pl,
	  server-src/amrmtape.pl: zero datestamp with --keep-label

2009-03-01  Nikolas Coukouma <atrus@zmanda.com>
	* server-src/amrmtape.pl: send messages to log file regardless of verbosity flag

2009-02-27  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Fix parsing of EXIT-HANDLING property.

2009-02-27  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Constants.pm.in: publish $MT and $MTX, too

2009-02-26  Dustin J. Mitchell <dustin@zmanda.com>
	* restore-src/restore.c: if the changer does not provide a device,
	  use the configured tapedev

2009-02-26  Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: update detection for sles11, opensuse11.1
	  rpm builds will be broken for a bit longer in trunk

2009-02-26  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/amgtar_perl.pl,
          application-src/amlog-script.pl,
          application-src/ampgsql.pl,
          application-src/amsamba.pl,
          application-src/amsuntar.pl,
          application-src/amzfs-sendrecv.pl,
          application-src/amzfs-snapshot.pl,
          application-src/script-email.pl,
          perl/Amanda/Application.swg,
          perl/Amanda/Script.pm,
          perl/Amanda/Script_App.pm:
	  load config-name/amanda-client.conf as well as amanda-client.conf

2009-02-26  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl,
	  installcheck/amgtar.pl,
	  installcheck/ampgsql.pl: use $@ to get eval errors (not $!)

2009-02-25  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/amoracle.pl,
	  application-src/ampgsql.pl,
	  example/amanda-client-oracle.conf.in,
	  example/amanda-client-postgresql.conf.in,
	  installcheck/ampgsql.pl,
	  man/xml-source/ampgsql.8.xml: bring amoracle and ampgsql properties
	  in line with conventions

2009-02-24  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, application-src/amgtar.c,